<resources>
    <string name="app_name">Peaky</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="record">Record</string>
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="challenges">Challenges</string>
    <string name="peaky">PE▲KY</string>
    <string name="pe">PE</string>
    <string name="triangle">▲</string>
    <string name="ky">KY</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="google_icon">Google Icon</string>
    <string name="login_with_google">Login with Google</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_big">SIGN UP</string>
    <string name="login_big">LOGIN</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="name_x">Name *</string>
    <string name="surname_x">Surname *</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender_x">Gender *</string>
    <string name="confirm_registration">Confirm registration </string>

    <string name="error_email_login">Invalid Email</string>
    <string name="error_password_login">Password must be at least 8 characters long</string>
    <string name="error_password_confirm_login">Passwords do not match</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="non_binary">Non-binary</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="fields_marked_with_are_mandatory">Fields marked with * are mandatory</string>
    <string name="start_pause_and_resume_recording">Start, pause and resume recording</string>
    <string name="end_recording">End recording</string>
    <string name="show_recorded_data">Show recorded data</string>
    <string name="show_reporters_tools">Show reporters\' tools</string>
    <string name="altitude">ALTITUDE</string>
    <string name="_0_m">0 m</string>
    <string name="back">Back</string>
    <string name="reporters_tool">Reporters\' tool</string>
    <string name="activity_data">Activity data</string>
    <string name="sport">Sport</string>
    <string name="add_a_point_of_interest">ADD A POINT OF INTEREST</string>
    <string name="notes_for_reporters">Notes for reporters</string>
    <string name="time">TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0_00_km">0.00 km</string>
    <string name="elevation_gain">ELEVATION GAIN</string>
    <string name="positive_0_m">+ 0 m</string>
    <string name="negative_0_m">- 0 m</string>
    <string name="go_to_users_position">Go to users position</string>
    <string name="searching">Searching…</string>
    <string name="save">Save</string>
    <string name="save_activity">Save activity</string>
    <string name="activity_name">Activity name</string>
    <string name="your_equipment">Your equipment</string>
    <string name="_0">0</string>
    <string name="technical_clothing">TECHNICAL CLOTHING</string>
    <string name="stats">Stats</string>
    <string name="footwear">FOOTWEAR</string>
    <string name="tools">TOOLS</string>
    <string name="wearables">WEARABLES</string>
    <string name="bikes">BIKES</string>
    <string name="add_new_equipment">Add new equipment</string>
    <string name="equipment_category">Equipment category *</string>
    <string name="equipment">Equipment *</string>
    <string name="brand_x">Brand *</string>
    <string name="brand_name">Brand name</string>
    <string name="model_x">Model *</string>
    <string name="purchase_date">Purchase date</string>
    <string name="price">Price</string>
    <string name="default_sports">Default sports</string>
    <string name="notes">Notes</string>
    <string name="select_one_or_more_sports">Select one or more sports</string>
    <string name="no_sport_selected">No sport selected</string>
    <string name="model">Model</string>
    <string name="info">Info</string>
    <string name="brand_model">brand+model</string>
    <string name="brand">Brand</string>
    <string name="distance_min">Distance</string>
    <string name="elevation_gain_min">Elevation gain</string>
    <string name="uses">Uses</string>
    <string name="peaks_reached">Peaks reached</string>
    <string name="delete_equipment">Delete equipment</string>
    <string name="update_equipment">Update equipment</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_equipment">Are you sure you want to delete this equipment?</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_activity">Delete activity</string>
    <string name="description">Description</string>
    <string name="add_peak">Add peak</string>
    <string name="select_sport">Select sport</string>
    <string name="recording">Recording...</string>
    <string name="add_a_peak_to_the_database">Add a peak to the world database</string>
    <string name="delete_adding_operation">Delete adding operation</string>
    <string name="select_a_peak">Select a peak</string>

</resources>