<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_maps"
        android:title="@string/maps" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record"
        android:title="@string/record" />

    <item
        android:id="@+id/navigation_challenges"
        android:icon="@drawable/ic_challenges"
        android:title="@string/challenges" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>