<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.profile.users_equipment.manage_equipment.ManageEquipmentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_theme_surfaceContainerLow">

                <Button
                    android:id="@+id/button_back"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/back"
                    android:textColor="@color/md_theme_onSurface_mediumContrast" />

                <TextView
                    android:id="@+id/textAltitudeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_new_equipment"
                    android:textColor="@color/md_theme_onSurface_mediumContrast"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_save"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/save"
                    android:textColor="@color/md_theme_onSurface_mediumContrast" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/equipment_category"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_equipment_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/spinner_border"
                android:padding="12dp" />

            <TextView
                android:id="@+id/textView_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.5"
                android:text="@string/equipment"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.5"
                android:background="@drawable/spinner_border"
                android:enabled="false"
                android:padding="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/brand_x"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/spinner_border"
                android:hint="@string/brand_name"
                android:imeOptions="actionNext"
                android:inputType="textLongMessage"
                android:padding="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/model_x"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/spinner_border"
                android:hint="@string/model"
                android:imeOptions="actionDone"
                android:inputType="textLongMessage"
                android:padding="12dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/purchase_date"
                        android:textColor="@color/md_theme_onSurface_mediumContrast"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textColor="@color/md_theme_onSurface_mediumContrast"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/select_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_border"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/purchase_date"
                        android:imeOptions="actionDone"
                        android:inputType="none"
                        android:padding="12dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_border"
                        android:hint="0.0"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:padding="12dp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/default_sports"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/button_default_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/spinner_border"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/no_sport_selected"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/notes"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/spinner_border"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                android:padding="12dp" />

            <TextView
                android:id="@+id/text_required_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fields_marked_with_are_mandatory"
                android:textColor="@color/red"
                android:layout_below="@id/container_date"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomSheet_default_sports"
        style="@style/Widget.Material3.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:behavior_draggable="true"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <ImageView
            android:id="@+id/arrowIcon"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:src="@drawable/bs_ic_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/select_one_or_more_sports"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>